vlib/v/checker/tests/sumtype_variant_mismatch.out
vlib/v/checker/tests/sumtype_variant_mismatch.vv:4:7: error: cannot cast `?string` to `?Any`
    2 | type Any2 = ?int | ?string
    3 | 
    4 | _ := ?Any(?string('baz'))
      |       ~~~~~~~~~~~~~~~~~~~
    5 | _ := ?Any(string('baz'))
    6 | _ := ?Any('baz')
vlib/v/checker/tests/sumtype_variant_mismatch.vv:10:7: error: cannot cast `string` to `?Any2`
    8 | 
    9 | _ := ?Any2(?string('baz'))
   10 | _ := ?Any2(string('baz'))
      |       ~~~~~~~~~~~~~~~~~~~
   11 | _ := ?Any2('baz')
vlib/v/checker/tests/sumtype_variant_mismatch.vv:11:7: error: cannot cast `string` to `?Any2`
    9 | _ := ?Any2(?string('baz'))
   10 | _ := ?Any2(string('baz'))
   11 | _ := ?Any2('baz')
      |       ~~~~~~~~~~~
